# Freely

./: .gitignore  LICENSE  Readme.md  eval_dataset.json  eval_results.md  eval_runner.js  package-lock.json  package.json  tsconfig.json
audio-capture-helper/: Cargo.toml
audio-capture-helper/src/: main.rs
overlay/: index.html  package-lock.json  package.json  panel.html  vite.config.d.ts.map  vite.config.js  vite.config.js.map  vite.config.ts
overlay/src/: main.js  main.js.map  main.ts  panel.ts  styles.css
overlay/src-tauri/: Cargo.toml  tauri.conf.json
overlay/src-tauri/capabilities/: default.json
overlay/src-tauri/src/: lib.rs
scripts/: postInstall.js
src/: index.js  index.ts  screenshot.ts  test-hotkey.ts  vision.ts
src/interactive/: loop.ts  loop.tsx
src/services/: ai.ts  audio-capture.ts  config.ts  cv.ts  install.ts  prompts.ts  screenshot.ts  vad.ts
src/services/daemon/: server.ts  sseServer.ts
src/types/: ink.d.ts  pdf-parse-debugging-disabled.d.ts
src/ui/: banner.ts  markdown.ts  renderer.ts  status.ts
